--- a/templates/cw-game.html
+++ b/templates/cw-game.html
@@ -4,7 +4,7 @@
     
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.find,Number.isFinite,Number.isInteger,console,console.log,document.head,performance.now"></script>
       <title>CodeWorld - $title$</title>
-      <link rel="stylesheet" href="$projectpath$/css/ghcjs-demo.css">
+      <link rel="stylesheet" href="$projectpath$/css/codeworld.css">
     
     <script language="javascript" src="rts.js"></script>
     <script language="javascript" src="lib.js"></script>
@@ -32,5 +32,5 @@
   
   <script language="javascript" src="runmain.js" defer></script>
   <script type="text/javascript" src="$projectpath$/js/ghcjs-debugmode.js"></script>
-  <script type="text/javascript" src="$projectpath$/js/ghcjs-demo.js"></script>
+  <script type="text/javascript" src="$projectpath$/js/cw-demo.js"></script>
 </html>
