--- a/css/codeworld.css
+++ b/css/codeworld.css
@@ -303,9 +303,9 @@ body {
 #screen {
     cursor: default;
     width: 100vw;
-    height: 80vh;
+    height: 76vh;
     max-width: 100vw;
-    max-height: 80vh;
+    max-height: 76vh;
 }
 #message {
     cursor: default;
@@ -313,4 +313,22 @@ body {
     height: 20vh;
     max-width: 100vw;
     max-height: 20vh;
+}
+
+#textbutton {
+float:left;margin-left:-4vw;margin-top:17vh;
+}
+
+#textmessage{cursor:default;width:48vw;height:20vh;max-width:48vw;max-height:20vh;float:right;}
+ 
+textarea#text {
+	width: 48vw;
+	height: 20vh;
+    max-width:48vw;max-height:20vh;
+    float: left;
+	border: 3px solid #cccccc;
+	padding: 5px;
+	font-family: Tahoma, sans-serif;
+	background-position: bottom right;
+	background-repeat: no-repeat;
 }
