--- a/templates/cw-game.html
+++ b/templates/cw-game.html
@@ -12,7 +12,7 @@
   </head>
   <body style="text-align: center">
     <canvas id="screen"></canvas>
-    <pre id="message" class="dropbox">$message$</pre>
+    <pre id="message" class="dropbox game">$message$</pre>
   </body>
   
   <script type="text/javascript">
