--- a/css/codeworld.css
+++ b/css/codeworld.css
@@ -307,7 +307,15 @@ body {
     max-width: 100vw;
     max-height: 76vh;
 }
-#message {
+#message.draw {
+    cursor: default;
+    width: 480vw;
+    height: 20vh;
+    max-width: 48vw;
+    max-height: 20vh;
+    float:right;
+}
+#message.game {
     cursor: default;
     width: 100vw;
     height: 20vh;
