--- a/templates/spec.html
+++ b/templates/spec.html
@@ -11,8 +11,6 @@
 
 <body>
 <div id="demo">
-$for(specs)$
-<h1>$name$</h1>
 
 <div id="tablediv" class="table-responsive-vertical shadow-z-1">
 <table id="table" class="table table-hover table-mc-light-blue">
@@ -35,8 +33,11 @@ $for(specs)$
         $endfor$
     </tbody>
 </table>
-$endfor$
+
 </div>
+
+<p>$notes$</p>
+
 </body>
 
 </html>
