--- a/templates/cw-game.html
+++ b/templates/cw-game.html
@@ -11,6 +11,11 @@
     <script language="javascript" src="out.js"></script>
   </head>
   <body style="text-align: center">
+      
+    $for(images)$
+    <img style="display: none;" id="$imgid$" src="$projectpath$/$imgfile$">
+    $endfor$
+      
     <canvas id="screen"></canvas>
     <pre id="message" class="dropbox game">$message$</pre>
   </body>
