--- a/templates/homplexity.html
+++ b/templates/homplexity.html
@@ -26,7 +26,7 @@
         $for(messages)$
             <tr>
                 <td data-title="Suggestion">$suggestion$</td>
-                <td class=$class$ data-title="Message">$message$</td>
+                <td class="$class$" data-title="Message">$message$</td>
             </tr>
         $endfor$
     </tbody>
