--- a/example/templates/example.html
+++ b/example/templates/example.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <meta charset=\"UTF-8\">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href=$projectpath$/css/normalize.css>
     <link rel="stylesheet" href=$projectpath$/css/style.css>
     <title>Example</title>
