--- a/templates/homplexity.html
+++ b/templates/homplexity.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <meta charset=\"UTF-8\">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href=$projectpath$/css/normalize.css>
     <link rel="stylesheet" href=$projectpath$/css/style.css>
     <title>Homplexity Code Quality Analysis</title>
@@ -25,7 +25,7 @@
     <tbody>
         $for(messages)$
             <tr>
-                <td data-title="Suggestion">$suggestion$</td>
+                <td class="$class$" data-title="Suggestion">$suggestion$</td>
                 <td class="$class$" data-title="Message">$message$</td>
             </tr>
         $endfor$
