--- a/templates/doc.html
+++ b/templates/doc.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <meta charset=\"UTF-8\">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href=$projectpath$/css/normalize.css>
     <link rel="stylesheet" href=$projectpath$/css/style.css>
     <title>$title$</title>
