--- a/templates/spec.html
+++ b/templates/spec.html
@@ -26,9 +26,9 @@
         $for(rows)$
             <tr>
                 $for(cols)$
-                <td data-title=$col$>$col$</td>
+                <td class="datatext" data-title=$col$>$col$</td>
                 $endfor$
-                <td class=$class$ data-title="Resultado">$result$</td>
+                <td class="$class$" data-title="Resultado">$result$</td>
             </tr>
         $endfor$
     </tbody>
