--- a/templates/cw-draw-fixed.html
+++ b/templates/cw-draw-fixed.html
@@ -6,9 +6,9 @@
       <title>CodeWorld - $title$</title>
       <link rel="stylesheet" href="$projectpath$/css/codeworld.css">
     
-    <script language="javascript" src="rts.js"></script>
-    <script language="javascript" src="lib.js"></script>
-    <script language="javascript" src="out.js"></script>
+    <script language="javascript" src="$runpath$/rts.js"></script>
+    <script language="javascript" src="$runpath$/lib.js"></script>
+    <script language="javascript" src="$runpath$/out.js"></script>
   </head>
   <body style="text-align: center">
       
@@ -17,18 +17,9 @@
     $endfor$
       
     <canvas id="screen"></canvas>
-    <textarea id="text">$textmessage$</textarea>
-    <button id="textbutton" class="cw-button" onclick="drawCW()">Draw</button>
-    <pre id="message" class="dropbox draw">$message$</pre>
+    <textarea style="display: none;" id="text">$textmessage$</textarea>
+    <pre id="message" class="dropbox game">$message$</pre>
   </body>
-  
-  <script type="text/javascript">
-  function drawCW() {
-      var imported = document.createElement('script');
-      imported.src = 'runmain.js';
-      document.head.appendChild(imported);
-  }
-  </script>
   
   <script type="text/javascript">
     function reportRuntimeError(err, str) {
@@ -45,6 +36,7 @@
     }
   </script>
   
+  <script type="text/javascript" src="$runpath$/runmain.js"></script>
   <script type="text/javascript" src="$projectpath$/js/ghcjs-debugmode.js"></script>
   <script type="text/javascript" src="$projectpath$/js/cw-demo.js"></script>
 </html>
