--- a/templates/specs.html
+++ b/templates/specs.html
@@ -28,7 +28,7 @@ $for(specs)$
         $for(rows)$
             <tr>
                 $for(cols)$
-                <td class="datatext" data-title=$col$>$col$</td>
+                <td class="datatext" data-title="arg">$col$</td>
                 $endfor$
                 <td class=$class$ data-title="Resultado">$result$</td>
             </tr>
