--- a/example/templates/example.html
+++ b/example/templates/example.html
@@ -25,6 +25,12 @@
 
 <a href=$tour$>$tour$</a>
 
+<h2>Haddock</h2>
+
+$for(haddocks)$
+<a href=$haddock$>$haddock$</a>
+$endfor$
+
 <h2>HLint</h2>
 
 <a href=$hlint$>$hlint$</a>
@@ -35,9 +41,7 @@
 
 <h2>HPC</h2>
 
-$for(hpcs)$
 <a href=$hpc$>$hpc$</a>
-$endfor$
 
 <h2>CodeWorld</h2>
 
