--- a/templates/cw-draw-button.html
+++ b/templates/cw-draw-button.html
@@ -16,7 +16,7 @@
     <img style="display: none;" id="$imgid$" src="$projectpath$/$imgfile$">
     $endfor$
       
-    <canvas id="screen"></canvas>
+    <canvas id="screen" class="widescreen"></canvas>
     <textarea id="text">$textmessage$</textarea>
     <button id="textbutton" class="cw-button" onclick="drawCW()">Draw</button>
     <pre id="message" class="dropbox draw">$message$</pre>
