--- a/templates/cw-game.html
+++ b/templates/cw-game.html
@@ -16,7 +16,7 @@
     <img style="display: none;" id="$imgid$" src="$projectpath$/$imgfile$">
     $endfor$
       
-    <canvas id="screen"></canvas>
+    <canvas id="screen" class="widescreen"></canvas>
     <pre id="message" class="dropbox game">$message$</pre>
   </body>
   
