--- a/css/codeworld.css
+++ b/css/codeworld.css
@@ -300,12 +300,19 @@ body {
   to { opacity: 0; }
 }
 
-#screen {
+.widescreen {
     cursor: default;
     width: 100vw;
     height: 76vh;
     max-width: 100vw;
     max-height: 76vh;
+}
+.fullscreen {
+    cursor: default;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 #message.draw {
     cursor: default;
