--- a/templates/cw-draw-button.html
+++ b/templates/cw-draw-button.html
@@ -12,14 +12,19 @@
   </head>
   <body style="text-align: center">
       
-    $for(images)$
-    <img style="display: none;" id="$imgid$" src="$projectpath$/$imgfile$">
-    $endfor$
-      
     <canvas id="screen" class="widescreen"></canvas>
     <textarea id="text">$textmessage$</textarea>
     <button id="textbutton" class="cw-button" onclick="drawCW()">Draw</button>
     <pre id="message" class="dropbox draw">$message$</pre>
+    
+    $for(images)$
+    <img style="visibility: hidden;" id="$imgid$" src="$projectpath$/$imgfile$">
+    $endfor$
+    $for(audios)$
+    <audio id="$audioid$"> <source src="$projectpath$/$audiofile$" type="audio/$audiotype$"> </audio>
+    $endfor$
+    
+    
   </body>
   
   <script type="text/javascript">
@@ -45,10 +50,11 @@
     function reportRuntimeError(err, str) {
       if (window.parent.addToMessage) {
         var message = window.parent.addToMessage('\n' + str);
+        var msgelem = window.parent.document.getElementById('message');
+        msgelem.scrollTop = msgelem.scrollHeight;
 
         if (err) {
-          var message = window.parent.document.getElementById('message');
-          message.classList.add('error');
+          msgelem.classList.add('error');
         }
       } else {
         console.log(str);
