--- a/templates/cw-draw-fullscreen.html
+++ b/templates/cw-draw-fullscreen.html
@@ -12,11 +12,15 @@
   </head>
   <body style="text-align: center">
       
-    $for(images)$
-    <img style="display: none;" id="$imgid$" src="$projectpath$/$imgfile$">
-    $endfor$
-      
     <canvas id="screen" class="fullscreen"></canvas>
+    
+    $for(images)$
+    <img style="visibility: hidden;" id="$imgid$" src="$projectpath$/$imgfile$">
+    $endfor$
+    $for(audios)$
+    <audio id="$audioid$"> <source src="$projectpath$/$audiofile$" type="audio/$audiotype$"> </audio>
+    $endfor$
+    
   </body>
   
   <script type="text/javascript">
