--- a/examples/plab/templates/nothing.html
+++ b/examples/plab/templates/nothing.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href=$projectpath$/css/normalize.css>
     <link rel="stylesheet" href=$projectpath$/css/style.css>
-    <title>$projectname$ - Página Vazia </title>
+    <title>$projectname$ - Empty page </title>
 </head>
 
 <body>
 <div id="demo">
 
-<p>Página vazia. Ocorreu um erro ou o repositório SVN do seu grupo encontra-se vazio. Já fez algum commit?</p>
+<p> Empty page. An error occur, or the SVN repository is empty. Please check if have committed something.</p>
 
 </div>
 </body>
