--- a/templates/diff.html
+++ b/templates/diff.html
@@ -6,8 +6,8 @@
   <title>$pageTitle$</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel='stylesheet' href='http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc4/angular-material.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css'>
+  <link rel='stylesheet' href='$projectpath$/css/angular-material.min.css'>
+<link rel='stylesheet' href='$projectpath$/css/octicons.min.css'>
 
       <link rel="stylesheet" href="$projectpath$/css/diff.css">
 
@@ -63,16 +63,16 @@
     </md-content>
   </div>
 </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-animate.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-aria.min.js'></script>
-<script src='http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc4/angular-material.min.js'></script>
-<script src='https://rawgit.com/google/diff-match-patch/master/javascript/diff_match_patch.js'></script>
-<script src='https://rawgit.com/amweiss/angular-diff-match-patch/v0.6.14/angular-diff-match-patch.js'></script>
+  <script src='$projectpath$/js/angular.min.js'></script>
+<script src='$projectpath$/js/angular-animate.min.js'></script>
+<script src='$projectpath$/js/angular-aria.min.js'></script>
+<script src='$projectpath$/js/angular-material.min.js'></script>
+<script src='$projectpath$/js/diff_match_patch.js'></script>
+<script src='$projectpath$/js/angular-diff-match-patch.js'></script>
 
   
 
-    <script  src="$projectpath$/js/diff.js"></script>
+<script  src="$projectpath$/js/diff.js"></script>
 
 
 
