--- a/templates/cw-draw-fullscreen.html
+++ b/templates/cw-draw-fullscreen.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.find,Number.isFinite,Number.isInteger,console,console.log,document.head,performance.now"></script>
+    <script src="$projectpath$/js/polyfill.min.js?features=default,Array.prototype.find,Number.isFinite,Number.isInteger,console,console.log,document.head,performance.now"></script>
       <title>CodeWorld - $title$</title>
       <link rel="stylesheet" href="$projectpath$/css/codeworld.css">
     
