--- a/templates/spec.html
+++ b/templates/spec.html
@@ -6,12 +6,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href=$projectpath$/css/normalize.css>
     <link rel="stylesheet" href=$projectpath$/css/style.css>
+    <script src="$projectpath$/js/run_prettify.js"></script>
     <title>$title$</title>
 </head>
 
 <body>
 
-<p>$notes$</p>
+<pre class="prettyprint default">$notes$</pre>
     
 <div id="demo">
 
