--- a/templates/ranks.html
+++ b/templates/ranks.html
@@ -12,6 +12,9 @@
 <body>
 <div id="demo">
     <h1>$title$</h1>
+    
+    <p>$notes$</p>
+    
     <div class="table-responsive-vertical shadow-z-1" >
         <table id="table" class="table table-hover table-mc-light-blue">
             <thead>
