--- a/templates/cw-draw-fullscreen.html
+++ b/templates/cw-draw-fullscreen.html
@@ -24,7 +24,7 @@
   </body>
   
   <script type="text/javascript">
-    function reportRuntimeError(err, str) {
+    function addMessage(err, str) {
         console.log(str);
     }
   </script>
