--- a/templates/cw-game-console.html
+++ b/templates/cw-game-console.html
@@ -25,7 +25,7 @@
   </body>
   
   <script type="text/javascript">
-    function reportRuntimeError(err, str) {
+    function addMessage(err, str) {
       if (window.parent.addToMessage) {
         var message = window.parent.addToMessage('\n' + str);
         var msgelem = window.parent.document.getElementById('message');
