--- a/templates/cw-draw-fixed.html
+++ b/templates/cw-draw-fixed.html
@@ -6,6 +6,7 @@
       <title>CodeWorld - $title$</title>
       <link rel="stylesheet" href="$projectpath$/css/codeworld.css">
     
+    <script type="text/javascript" src="$projectpath$/js/cw-demo.js"></script>
     <script language="javascript" src="$runpath$/rts.js"></script>
     <script language="javascript" src="$runpath$/lib.js"></script>
     <script language="javascript" src="$runpath$/out.js"></script>
@@ -26,7 +27,7 @@
   </body>
   
   <script type="text/javascript">
-    function reportRuntimeError(err, str) {
+    function addMessage(err, str) {
       if (window.parent.addToMessage) {
         var message = window.parent.addToMessage('\n' + str);
         var msgelem = window.parent.document.getElementById('message');
@@ -43,5 +44,4 @@
   
   <script type="text/javascript" src="$runpath$/runmain.js"></script>
   <script type="text/javascript" src="$projectpath$/js/ghcjs-debugmode.js"></script>
-  <script type="text/javascript" src="$projectpath$/js/cw-demo.js"></script>
 </html>
