--- a/templates/cw-game-fullscreen.html
+++ b/templates/cw-game-fullscreen.html
@@ -25,7 +25,7 @@
   </body>
   
   <script type="text/javascript">
-    function reportRuntimeError(err, str) {
+    function addMessage(err, str) {
       console.log(str);
 
     }
